# Math_engine

./: CMakeLists.txt  LICENSE  README.md
include/: ASTNode.h  ast.h  evaluator.h  parser.h  token.h  tokenizer.h
src/: ast.cpp  evaluator.cpp  parser.cpp  tokenizer.cpp
tests/: README.md  test_tokenizer.cpp
